# karp-s-backend

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  pyrightconfig.json
karps/: api.py  config.py  database.py  logging.py  main.py  models.py  query.py  search.py  util.py
karps/auth/: deps.py  sbauth_jwt.py
karps/database/: database.py  query.py
karps/errors/: errors.py
karps/query/: query.ebnf  query.py
karps/util/: http.py
src/karps/: api.py  config.py  logging.py  models.py  search.py
src/karps/auth/: sbauth_api_key.py
src/karps/cli/: cli.py
src/karps/database/: database.py  query.py
src/karps/errors/: errors.py
src/karps/query/: query.ebnf  query.py
src/karps/util/: git.py  yaml.py
tests/: test_query_parser.py  test_serializing.py
tests/integration/: conftest.py  test_e2e.py  test_serializing.py
tests/integration/__snapshots__/: test_e2e.ambr
tests/snapshot/: test_sql_query.py
tests/snapshot/__snapshots__/: test_sql_query.ambr
typings/tatsu/: __init__.pyi
typings/tatsu/exceptions/: __init__.pyi
util/: rename_db.py
