[project]
name = "karp-s-backend"
version = "1.0.0-dev"
description = "Structed data infrastructure"
readme = "README.md"
requires-python = ">=3.12.3"
dependencies = [
    "fastapi==0.124.2",
    "PyYAML==6.0.2",
    "mysql-connector-python",
    "environs",
    "pyjwt[crypto]>=2.11.0",
    "tatsu>=5.13.1",
]

[dependency-groups]
prod = ["gunicorn>=25.1.0", "uvloop>=0.22.1"]
dev = [
    "basedpyright>=1.29.2",
    "pytest>=8.3.5",
    "requests>=2.32.3",
    "ruff>=0.9.2",
    "syrupy>=4.9.1",
    "uvicorn>=0.41.0",
]

[project.scripts]
karp-s-cli = "karps.cli.cli:main"

[tool.uv]
package = true
