[project]
name = "karp-s-backend"
version = "1.0.0-dev"
description = "Structed data infrastructure"
readme = "README.md"
requires-python = ">=3.12.3"
dependencies = [
    "fastapi==0.136.0",
    "pyyaml==6.0.3",
    "mysql-connector-python==9.6.0",
    "environs==15.0.1",
    "pyjwt[crypto]==2.12.1",
    "tatsu==5.18.0",
]

[dependency-groups]
prod = ["gunicorn>=25.1.0", "uvloop>=0.22.1"]
dev = [
    "basedpyright==1.39.3",
    "pytest",
    "requests",
    "ruff==0.15.11",
    "syrupy",
    "uvicorn",
]

[project.scripts]
karp-s-cli = "karps.cli.cli:main"

[tool.uv]
package = true
exclude-newer = "30 days"
add-bounds = "major"
